--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,5 +55,6 @@ a:hover {
 
 .container {
   max-width: 1440px;
+  width: 100%;
   margin: 0 auto;
 }
